--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ body {
   opacity: 1;
   background-color: lightsalmon;
 }
-@media screen and (max-width: 250px) {
+@media screen and (max-width: 1000px) {
   .media-info-msg {
-    opacity: 0;
+    display: none;
   }
 }
