--- a/css/footer.css
+++ b/css/footer.css
@@ -9,7 +9,8 @@ footer {
 }
 .footer-block {
   display: flex;
-  justify-content: center;
+  height: 60px;
+  justify-content: space-between;
   align-items: center;
   border-top: 1px solid #e9ecef;
   padding: 5px;
@@ -19,10 +20,10 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 4px;
+  font-size: 12px;
   margin: 0px 10px 0px 10px;
   text-align: center;
 }
 .footer-icons img {
-  width: 15px;
+  width: 25px;
 }
