--- a/css/main.css
+++ b/css/main.css
@@ -5,27 +5,32 @@
   border: 0.2px solid rgba(0, 0, 0, 0.1);
 }
 .item-list__img {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   border: 0.2px solid rgba(0, 0, 0, 0.1);
   padding: 5px;
 }
 .item-list__img img {
   width: 50px;
+  justify-content: center;
 }
 .item-list__info div {
   margin: 3px;
+  padding: 2px;
 }
 .item-list__info {
-  font-size: 9px;
+  font-size: 18px;
   padding-left: 10px;
   flex-direction: column;
   justify-content: start;
   align-items: start;
 }
 .item-list__info-meta {
-  font-size: smaller;
+  font-size: 12px;
   color: rgba(0, 0, 0, 0.1);
+}
+.item-list__info-price {
+  font-size: 15px;
 }
 .write-btn {
   position: fixed;
@@ -35,5 +40,5 @@
   padding: 5px 10px 5px 10px;
   border-radius: 25px;
   color: white;
-  font-size: 10px;
+  font-size: 10%;
 }
