글쓰기아이콘추가

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+.write-btn {
+  position: fixed;
+  bottom: 100px;
+  right: 30px;
+  background-color: coral;
+  padding: 15px 20px 15px 20px;
+  border-radius: 25px;
+  color: white;
+  font-size: 20px;
+}
+.write-btn:hover {
+  transform: scale(1.1);
+}
+
 .item-list {
   display: flex;
   justify-content: first baseline;
@@ -31,14 +45,4 @@
 }
 .item-list__info-price {
   font-size: 15px;
-}
-.write-btn {
-  position: fixed;
-  bottom: 50px;
-  right: 10px;
-  background-color: coral;
-  padding: 5px 10px 5px 10px;
-  border-radius: 25px;
-  color: white;
-  font-size: 10%;
 }
